[FIX] web_field_tooltip: fixed popup colors when using odoo dark mode

--- a/web_field_tooltip/static/src/components/field_tooltip/field_tooltip.scss
+++ b/web_field_tooltip/static/src/components/field_tooltip/field_tooltip.scss
@@ -33,4 +33,15 @@ sup.field-tooltip {
     .popover-content {
         background-color: white;
     }
+
+    &.popup-dark-mode {
+        .popover-title {
+            font-weight: bold;
+            background-color: #242733;
+        }
+
+        .popover-content {
+            background-color: unset;
+        }
+    }
 }
